Fixed the UI (reverted kiota version).  Added support for managing api versions.
