# hub/app/src/main/java/io/apicurio/lifecycle/storage/mappers/SearchedApiDtoMapper.java
@@ -39,7 +39,6 @@ public class SearchedApiDtoMapper implements RowMapper<SearchedApiDto> {
         return SearchedApiDto.builder()
                 .apiId(rs.getString("apiId"))
                 .type(rs.getString("type"))
-                .encoding(rs.getString("encoding"))
                 .name(rs.getString("name"))
                 .description(rs.getString("description"))
                 .owner(rs.getString("owner"))
